# orange

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: build-feishu-sidecar.mjs  build-im-sidecars.mjs  desktop-build.mjs  desktop-dev.mjs  macos-dev-cargo-runner.sh  macos-dev-runner.mjs  macos-dev-signing-init.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  macos-icon.icns
src-tauri/sidecars/feishu-gateway/: buildmentions_test.go  go.mod  main.go  main_test.go
src-tauri/src/: agent.rs  agent_tools.rs  commands.rs  domain.rs  export.rs  lib.rs  logging.rs  main.rs  model_provider.rs  runtime.rs  skills.rs  storage.rs  text_edit.rs
src-tauri/src/im/: feishu.rs  mod.rs
src/agent/: AgentFloatingCard.tsx  AgentInput.tsx  AgentPanel.tsx  AgentPanelSections.tsx  CitationList.tsx  ToolCallList.tsx  agentFloatGeometry.ts  useAgentFloatLayout.ts
src/diff/: DiffPanel.tsx  markdownDiff.ts
src/editor/: DocumentPane.tsx  EditorFileChrome.tsx  EditorPane.tsx  EditorTabBar.tsx  LineNumberedTextarea.tsx  lineNumberUtils.ts  useSyncedMarkdownScroll.ts
src/knowledge-base/: FileTree.tsx  KnowledgeBaseSidebar.tsx  treeUtils.ts
src/settings/: SettingsDrawer.tsx  SettingsSections.tsx  SkillsModal.tsx
src/shared/: ConfirmDialog.tsx  MarkdownLink.tsx  ModelCascadeSelector.tsx  OverflowTooltipText.tsx  id.ts  logger.ts  mockWorkspace.ts  modelSelection.ts  selectors.ts  tauriApi.ts  types.ts  useDismissable.ts
src/styles/: app.css
src/workspace/: DocumentHistoryDialog.tsx  TopBar.tsx  WorkspaceShell.tsx  useAgentTurnDraft.ts  useDocumentPreview.ts  useResizableWorkspaceLayout.ts  useReviewChangeLogger.ts  useWorkspaceBootData.ts  useWorkspaceDrafts.ts  useWorkspaceSettingsActions.ts
