[package]
name = "cici-note"
version = "0.1.0"
description = "Local-first knowledge base agent assistant"
authors = ["Cici Note"]
edition = "2021"

[lib]
name = "cici_note_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "cici-note"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native-sync-persistent"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
quick-xml = "0.36"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tempfile = "3"
thiserror = "1"
trash = "5.2.6"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
