[package]
name = "orange"
version = "0.1.0"
description = "Local-first knowledge base agent assistant"
authors = ["橘记"]
edition = "2021"

[lib]
name = "orange_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "orange"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
genpdf = "0.2"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native-sync-persistent"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
quick-xml = "0.36"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tempfile = "3"
thiserror = "1"
trash = "5.2.6"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
tauri-plugin-log = "2.8.0"
log = "0.4"
tauri-plugin-opener = "2"
# IM 网关需要按通道异步串行化会话读写，避免并发事件覆盖持久化快照。
tokio = { version = "1", features = ["sync"] }
